add_library(bsc_lib bsc.cpp libbsc/bwt/libsais/libsais.c libbsc/adler32/adler32.cpp libbsc/coder/coder.cpp libbsc/coder/qlfc/qlfc.cpp libbsc/coder/qlfc/qlfc_model.cpp
        libbsc/filters/detectors.cpp libbsc/filters/preprocessing.cpp libbsc/libbsc/libbsc.cpp libbsc/lzp/lzp.cpp libbsc/platform/platform.cpp
        libbsc/st/st.cpp libbsc/bwt/bwt.cpp)